# esco

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  libtool  ruconv.sh  srcregen.pl
docs/: Makefile  Makefile.am  Makefile.in  README_RU.utf8  basics.txt
include/: b93defs.h  b93machine.h  b93preprocessor.h  b93source.h  bfmachine.h  bfmemory.h  bfpreprocessor.h  blankreader.h  bytermachine.h  bytermemory.h  byterpreprocessor.h  compositeenv.h  consoleface.h  defs.h  envtouch.h  escoconf.h  filereader.h  gmpfake.h  hodorpreprocessor.h  hqmachine.h  hqpreprocessor.h  interface.h  machine.h  machinecreater.h  object.h  ookpreprocessor.h  preprocessor.h  source.h  sourcereader.h  spoonpreprocessor.h  strerror.h  termenv.h  wsdefs.h  wsmachine.h  wsmemory.h  wsnumber.h  wspreprocessor.h  xdpreprocessor.h
scripts/: hw.bf  hw.hodor  hw.hq9  hw.ook  hw.spoon  hw.xd
src/: Makefile  Makefile.am  Makefile.in  b93machine.cpp  b93preprocessor.cpp  bfmachine.cpp  bfmemory.cpp  bfpreprocessor.cpp  blankreader.cpp  bytermachine.cpp  byterpreprocessor.cpp  compositeenv.cpp  consoleface.cpp  envtouch.cpp  esco  esco.cpp  escoconf.cpp  filereader.cpp  hodorpreprocessor.cpp  hqmachine.cpp  hqpreprocessor.cpp  interface.cpp  machine.cpp  machinecreater.cpp  ookpreprocessor.cpp  sourcereader.cpp  spoonpreprocessor.cpp  strerror.cpp  termenv.cpp  wsmachine.cpp  wsmemory.cpp  wsnumber.cpp  wspreprocessor.cpp  xdpreprocessor.cpp
src/.deps/: b93machine.Po  b93preprocessor.Po  bfmachine.Po  bfmemory.Po  bfpreprocessor.Po  blankreader.Po  bytermachine.Po  byterpreprocessor.Po  compositeenv.Po  consoleface.Po  envtouch.Po  esco.Po  escoconf.Po  filereader.Po  hodorpreprocessor.Po  hqmachine.Po  hqpreprocessor.Po  interface.Po  machine.Po  machinecreater.Po  ookpreprocessor.Po  sourcereader.Po  spoonpreprocessor.Po  strerror.Po  termenv.Po  wsmachine.Po  wsmemory.Po  wsnumber.Po  wspreprocessor.Po  xdpreprocessor.Po
